--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - fix incorrect prereq needed for tests
 
 0.001     2020-05-21 15:51:00Z
           - Initial release.
