--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for JSON-Schema-Draft201909
           - add infinite recursion detection
           - process properties in sorted order, for consistent ordering of
             results
+          - mark a numeric comparison test as TODO on 32-bit machines (see
+            GHI #10)
 
 0.002     2020-05-27 22:28:15Z
           - fix incorrect prereq needed for tests
