--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.003     2020-05-31 20:10:02Z
           - add infinite recursion detection
           - process properties in sorted order, for consistent ordering of
