--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.004     2020-06-02 19:14:32Z
           - add support for $recursiveAnchor and $recursiveRef
           - support use of "$ref":"https://json-schema.org/draft/2019-09/schema"
