Changes entries for all the _traverse_for_identifiers fixes

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - fix some edge cases with usage of $recursiveAnchor, $recursiveRef
+          - fixed several issues with resource identification within schema
+            documents
 
 0.004     2020-06-02 19:14:32Z
           - add support for $recursiveAnchor and $recursiveRef
