--- a/README.pod
+++ b/README.pod
@@ -10,13 +10,16 @@ JSON::Schema::Draft201909 - Validate data against a schema
 
 =head1 VERSION
 
-version 0.004
+version 0.005
 
 =head1 SYNOPSIS
 
   use JSON::Schema::Draft201909;
 
-  $js = JSON::Schema::Draft2019->new;
+  $js = JSON::Schema::Draft2019->new(
+    output_format => 'flag',
+    ... # other options
+  );
   $result = $js->evaluate($instance_data, $schema_data);
 
 =head1 DESCRIPTION
@@ -127,10 +130,6 @@ To date, missing components include most of these. More specifically, features t
 
 =item *
 
-recognition of C<$id>
-
-=item *
-
 loading multiple schema documents, and registration of a schema against a canonical base URI
 
 =item *
@@ -152,14 +151,6 @@ loading schema documents from the network
 =item *
 
 loading schema documents from a local web application (e.g. L<Mojolicious>)
-
-=item *
-
-use of C<$recursiveRef> and C<$recursiveAnchor>
-
-=item *
-
-use of plain-name fragments with C<$anchor>
 
 =back
 
