--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - raise some inadequate prereq declarations
 
 0.006     2020-06-19 20:54:40Z
           - add support for evaluation against a uri
