--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.007     2020-06-21 21:20:33Z
           - raise some inadequate prereq declarations
           - fix incorrect canonical uri when evaluating a (sub)schema using a
