--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - fix bad syntax used in a test
 
 0.007     2020-06-21 21:20:33Z
           - raise some inadequate prereq declarations
