--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.008     2020-06-22 04:24:06Z
           - fix bad syntax used in a test
 
