add some missing checks for uri collisions
- a document with the same uri but different content was allowed to take the
place of the original document
- we should silently allow re-adding schemas with identical content, by
re-using the existing document object

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - no longer allowing adding another schema document with a duplicate
+            uri but different schema content (some collision checks were too
+            lax).
 
 0.008     2020-06-22 04:24:06Z
           - fix bad syntax used in a test
