fix: $recursiveRef must check for $recursiveAnchor: true at initial target schema resource
If no such keyword is found, then behaviour is identical to $ref and the
dynamic scope is *not* examined to find a new target URI.

see https://json-schema.org/draft/2019-09/json-schema-core.html#rfc.section.8.2.4.2

--- a/Changes
+++ b/Changes
@@ -4,7 +4,8 @@ Revision history for JSON-Schema-Draft201909
           - no longer allowing adding another schema document with a duplicate
             uri but different schema content (some collision checks were too
             lax).
-          - fix behaviour of $recursiveRef without an $recursiveAnchor
+          - fix behaviour of $recursiveRef without an $recursiveAnchor in the
+            initial target scope
 
 0.008     2020-06-22 04:24:06Z
           - fix bad syntax used in a test
