JSON-Schema-Draft201909-0.009
          - no longer allowing adding another schema document with a duplicate
            uri but different schema content (some collision checks were too
            lax).
          - fix behaviour of $recursiveRef without an $recursiveAnchor in the
            initial target scope

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Draft201909 - Validate data against a schema
 
 =head1 VERSION
 
-version 0.008
+version 0.009
 
 =head1 SYNOPSIS
 
@@ -38,8 +38,8 @@ L<JSON::Schema::Draft201909::Result/output_format>.
 
 =head2 short_circuit
 
-When true, evaluation will immediately return upon encountering the first validation failure, rather
-than continuing to find all errors.
+When true, evaluation will return early in any execution path as soon as the outcome can be
+determined, rather than continuing to find all possible errors.
 
 Defaults to true when C<output_format> is C<flag>, and false otherwise.
 
