--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.010     2020-07-23 16:50:18Z
           - fixed error generation for validator keywords with numeric
             arguments (e.g. minimum, multipleOf)
