--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - better normalization of uris in errors
 
 0.010     2020-07-23 16:50:18Z
           - fixed error generation for validator keywords with numeric
