traversal implementation - squashed
---------

initial sketch of traversal - implemented for core vocabulary only

fixes to traversal for base implementation and core vocabulary

note tests won't pass yet until we can traverse applicator keywords too

implement traversal for applicator vocabulary

implement traverse for Validation vocabulary

implement traversal for meta-data vocabulary

implement traversal for content and format vocabularies

XXX more fixmes for core vocabulary

squash! traversal implementation

squash! traversal implementation

squash! traversal implementation

squash! traversal implementation

--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@ Revision history for JSON-Schema-Draft201909
 {{$NEXT}}
           - refactor code into separate vocabulary classes, to faciliate
             future support for custom vocabularies
+          - traverse the schema before evaluation, for more correct
+            and complete extraction of identifiers and invalid syntax
 
 0.015     2020-10-20 03:08:36Z
           - fixed infinity/overflow checks for older perls
