--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@ Revision history for JSON-Schema-Draft201909
 {{$NEXT}}
           - ensure "enum" value is an array
           - fix detection of bad $recursiveAnchor
+          - refactor code into separate vocabulary classes, to faciliate
+            future support for custom vocabularies
 
 0.013     2020-09-15 19:14:53Z
           - detect more cases of resource identifier collisions
