--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - refactor code into separate vocabulary classes, to faciliate
+            future support for custom vocabularies
 
 0.015     2020-10-20 03:08:36Z
           - fixed infinity/overflow checks for older perls
