--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.013     2020-09-15 19:14:53Z
           - detect more cases of resource identifier collisions
           - fix resolution of relative $ids
