properly calculate current location at $recursiveAnchor

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - ensure "enum" value is an array
+          - fix detection of bad $recursiveAnchor
 
 0.013     2020-09-15 19:14:53Z
           - detect more cases of resource identifier collisions
