fix uri calculation for infinite loop detection

--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for JSON-Schema-Draft201909
           - ensure "enum" value is an array
           - do not evaluate non-arrays against "unevaluatedItems"
           - fix detection of bad $recursiveAnchor
+          - fix canonical uri calculation for $schema, $recursiveAnchor, and
+            infinite loop detection
 
 0.013     2020-09-15 19:14:53Z
           - detect more cases of resource identifier collisions
