--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.014     2020-10-16 19:21:17Z
           - ensure "enum" value is an array
           - do not evaluate non-arrays against "unevaluatedItems"
