--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - fixed infinity/overflow checks for older perls
 
 0.014     2020-10-16 19:21:17Z
           - ensure "enum" value is an array
