--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Draft201909 - Validate data against a schema
 
 =head1 VERSION
 
-version 0.014
+version 0.015
 
 =head1 SYNOPSIS
 
@@ -318,6 +318,11 @@ additional output formats beyond C<flag>, C<basic> and C<terse> (L<https://json-
 examination of the C<$schema> keyword for deviation from the standard metaschema, including changes to vocabulary behaviour
 
 =back
+
+Additionally, some small errors in the specification (which have been fixed in the next draft
+specification version) are fixed here rather than implementing the precise but unintended behaviour,
+most notably in the use of json pointers rather than fragment-only URIs in C<instanceLocation> and
+C<keywordLocation> in annotations and errors.
 
 =head1 SECURITY CONSIDERATIONS
 
