--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - further fixes to infinite loop detection
+          - fix dereference error when evaluating "definitions",
+            "dependencies"
 
 0.015     2020-10-20 03:08:36Z
           - fixed infinity/overflow checks for older perls
