When adding a schema document, set its canonical uri to the passed-in uri...??? is this even right?
- preserve all other resources mapping to a previous document with canonical
uri '' when adding a second one with canonical_uri = ''

- fixes oversight in a test: exception from add_schema() due to resource
collision was not being seen by the test

--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for JSON-Schema-Draft201909
           - further fixes to infinite loop detection
           - fix dereference error when evaluating "definitions",
             "dependencies"
+          - when adding another schema document with no canonical uri, do not
+            remove any identifiers found in the previous document
 
 0.015     2020-10-20 03:08:36Z
           - fixed infinity/overflow checks for older perls
