increment $VERSION after 0.019 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
+{{$NEXT}}
+
 0.019     2020-12-08 18:40:10Z
           - further improvements to the "terse" output format
           - add_schema will now die with a Result object rather than a
